test/negative/parse_missing_end_if.mut
# Negative: missing 'end' to close if
x: i64 = 10
if x > 5
    print(x)
